--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
   
 	<!-- navigointipalkki -->
   <div class="navigation-bar">
-    <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" /></a>          
-    <ul>
-        <a href="kauppa.html">Kauppa</a>
-        <a href="tilaa.html">Tilaa</a>
-        <a href="tiedot.html">Tiedot</a>
-    </ul> 
+    <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" ></a>          
+    <a href="kauppa.html">Kauppa</a>
+    <a href="tilaa.html">Tilaa</a>
+    <a href="tiedot.html">Tiedot</a>
   </div >
 
   <!-- Pidike sisällön keskittämiseen. -->
@@ -32,14 +30,13 @@
     <br>
     <p>-lähde</p>
     
-     
      <!-- Kuvalinkit-->
     <div class="kuvapidike">
  
-      <a href="kauppa.html"><img src="kuvat/pexels-pixabay-271932Kauppaversio.jpg" alt="Kauppa. Kettu nukkuu maassa." class="kuva" style="border-radius: 25px;"/></a>
-      <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. maatila ja pari traktoria" class="kuva" style="border-radius: 25px;" /></a>
-      <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;" /></a>
-      <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva" /></a>
+      <a href="kauppa.html"><img src="kuvat/pexels-pixabay-271932Kauppaversio.jpg" alt="Kauppa. Kettu nukkuu maassa." class="kuva" style="border-radius: 25px;"></a>
+      <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. maatila ja pari traktoria" class="kuva" style="border-radius: 25px;"></a>
+      <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;"></a>
+      <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva"></a>
  
     </div>
     <br><br><br><br>
