--- a/kauppa.html
+++ b/kauppa.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <title>Maaku</title>
+    <title>Maaku Kauppa</title>
    
  
 
@@ -16,24 +16,22 @@
    
 		<!-- navigointipalkki -->
   <div class="navigation-bar">
-    <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" /></a>
-
-        <ul>
-            <a href="index.html">Koti</a></li>
-            <a href="tilaa.html">Tilaa</a></li>
-            <a href="tiedot.html">Tiedot</a></li>
-        </ul>
-</div >
+    <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" ></a>
+    <a href="index.html">Koti</a>
+    <a href="tilaa.html">Tilaa</a>
+    <a href="tiedot.html">Tiedot</a>
+  </div >
 
 
 
-
+<!-- Pidike sisällön keskittämiseen. -->
 <div class="pidike">
 <h1 style="background-color: #9DFE98; display: inline-block; border-radius: 5px;">Kauppa</h1>
 <br>
 <img src="kuvat/pexels-pixabay-271932.jpg" alt="Kettu nukkuu maassa." style="width: 100%; height: auto; position: static;">
-
 <h2 style="background-color: #9DFE98; display: inline-block; border-radius: 5px;">Tuotevalikoima</h2>
+
+<!-- Kaupan Tuotekortit ja niiden pidike. -->
   <div class="kortinpidike">
     <div class="kortti">
       <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: blue;" />
@@ -73,16 +71,15 @@
   </div>
   
   <br><br><br><br><br><br>
-
-  <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" /></a>
+  <!-- Logo hieman isompana-->
+  <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
 
   
  <!-- Kuvalinkit-->
   <div class="kuvapidike">
-  
-    <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. maatila ja pari traktoria" class="kuva" style="border-radius: 25px;" /></a>
-    <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;" /></a>
-    <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva"/></a>
+    <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. maatila ja pari traktoria" class="kuva" style="border-radius: 25px;" ></a>
+    <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;" ></a>
+    <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva"></a>
     <br><br><br><br><br>
   </div>
 
