--- a/kauppa.html
+++ b/kauppa.html
@@ -12,88 +12,90 @@
  
 
   </head>
- <body>
+  <body>
    
 		<!-- navigointipalkki -->
-  <div class="navigation-bar">
-    <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" ></a>
-    <a href="index.html">Koti</a>
-    <a href="tilaa.html">Tilaa</a>
-    <a href="tiedot.html">Tiedot</a>
-  </div >
+    <div class="navigation-bar">
+      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
+      <a href="index.html">Koti</a>
+      <a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+      <a href="tiedot.html">Tiedot</a>
+    </div >
 
 
 
-<!-- Pidike sisällön keskittämiseen. -->
-<div class="pidike">
-<h1 style="background-color: #9DFE98; display: inline-block; border-radius: 5px;">Kauppa</h1>
-<br>
-<img src="kuvat/pexels-pixabay-271932.jpg" alt="Kettu nukkuu maassa." style="width: 100%; height: auto; position: static;">
-<h2 style="background-color: #9DFE98; display: inline-block; border-radius: 5px;">Tuotevalikoima</h2>
+    <!-- Pidike sisällön keskittämiseen. -->
+    <div class="pidike">
+      <h1 style="background-color: #9DFE98; display: inline-block; border-radius: 5px;">Kauppa</h1>
+      <br>
+      <figure>
+        <img src="kuvat/pexels-pixabay-271932.jpg" alt="Red-Fox-Lying-On-Ground. Kettu nukkuu maassa." style="width: 80%; height: auto; ">
+        <figcaption>Red fox lying on ground - Photo by Pixabay: https://www.pexels.com/photo/red-fox-lying-on-ground-271932</figcaption>
+      </figure>
+      <h2 style="background-color: #9DFE98; display: inline-block; border-radius: 5px;">Tuotevalikoima</h2>
 
-<!-- Kaupan Tuotekortit ja niiden pidike. -->
-  <div class="kortinpidike">
-    <div class="kortti">
-      <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: blue;" />
-      <h1>Product 1</h1>
-      <p class="hinta">19.99€</p>
-      <p>jotain tuotteesta..</p>
-      <button>Lisää tietoa</button>
-      <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
+      <!-- Kaupan Tuotekortit ja niiden pidike. -->
+      <div class="kortinpidike">
+        <div class="kortti">
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: blue;" />
+          <h2>Tuote 1</h2>
+          <p class="hinta">19.99€</p>
+          <p>jotain tuotteesta..</p>
+          <button>Lisää tietoa</button>
+          <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
+        </div>
+        <br>
+        <div class="kortti">
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: green;" />
+          <h2>Tuote 2</h2>
+          <p class="hinta">99.99</p>
+          <p>jotain tuotteesta..</p>
+          <button>Lisää tietoa</button>
+          <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
+        </div>
+        <br>
+        <div class="kortti">
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: yellow;" />
+          <h2>Tuote 3</h2>
+          <p class="hinta">179.99</p>
+          <p>jotain tuotteesta..</p>
+          <button>Lisää tietoa</button>
+          <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
+        </div>
+        <br>
+        <div class="kortti">
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: red;" />
+          <h2>Tuote 4</h2>
+          <p class="hinta">499.99</p>
+          <p>jotain tuotteesta..</p>
+          <button>Lisää tietoa</button>
+          <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
+        </div>
+      </div>
+    
+      <br><br><br><br><br><br>
+      <p><a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a></p>
+      <!-- Logo hieman isompana-->
+      <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
+      <br>
+    
+      <!-- Kuvalinkit-->
+      <div class="kuvapidike">
+        <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. Peltoa ja pari traktoria ylhäältä päin kuvattuna" class="kuva" style="border-radius: 25px;" ></a>
+        <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;" ></a>
+        <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva"></a>
+        <br><br><br><br><br>
+      </div>
+
     </div>
-    <br>
-    <div class="kortti">
-      <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: green;" />
-      <h1>Product 2</h1>
-      <p class="hinta">99.99</p>
-      <p>jotain tuotteesta..</p>
-      <button>Lisää tietoa</button>
-      <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
+
+    <div class="footer">
+      <hr>
+      <footer>
+        <p>Copyright &copy; 2024, Valtterin nettisivu</p>
+      </footer>
     </div>
-    <br>
-    <div class="kortti">
-      <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: yellow;" />
-      <h1>Product 3</h1>
-      <p class="hinta">179.99</p>
-      <p>jotain tuotteesta..</p>
-      <button>Lisää tietoa</button>
-      <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
-    </div>
-    <br>
-    <div class="kortti">
-      <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: red;" />
-      <h1>Product 4</h1>
-      <p class="hinta">499.99</p>
-      <p>jotain tuotteesta..</p>
-      <button>Lisää tietoa</button>
-      <div class="piiloteksti">tämän ei pitäis näkyä aluksi.</div>
-    </div>
-  </div>
-  
-  <br><br><br><br><br><br>
-  <!-- Logo hieman isompana-->
-  <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
 
-  
- <!-- Kuvalinkit-->
-  <div class="kuvapidike">
-    <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. maatila ja pari traktoria" class="kuva" style="border-radius: 25px;" ></a>
-    <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;" ></a>
-    <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva"></a>
-    <br><br><br><br><br>
-  </div>
-
-</div>
-
-<div class="footer">
-  <hr>
-  <footer>
-    <p>Copyright &copy; 2024, Valtterin nettisivu</p>
-  </footer>
-</div>
-
-
-
- </body>
+  </body>
  
 </html>
