--- a/tiedot.html
+++ b/tiedot.html
@@ -15,18 +15,13 @@
  <body>
     <!-- navigointipalkki -->
     <div class="navigation-bar">
-      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" ></a>
-        <a href="index.html">Koti</a>
-        <a href="tilaa.html">Tilaa</a>
-        <a href="kauppa.html">Kauppa</a>
-
+      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
+      <a href="index.html">Koti</a>
+      <a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+      <a href="kauppa.html">Kauppa</a>
     </div >
-    <!-- Vaadittu lista. -->
-    <ul>
-      <li>jotain</li>
-      <li>jotain</li>
-      <li>jne..</li>
-    </ul>
+    
+ 
     <!-- Pidike sisällön keskittämiseen. -->
     <div class="pidike">
 
@@ -35,15 +30,18 @@
       <h2>Kysyttävää? Soita numeroon xxx-xxxxxx!</h2>
       <p>Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.</p>
       <br>
-      <p>Yhteystiedot: <br>puhelinnumero: xxx-xxxxxx <br>sähköposti: joku(miukumauku)maakumail.fi</p>
-
-      <!-- Logo hieman isompana-->
-      <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
+      <p>Yhteystiedot: <br>puhelinnumero: xxx-xxxxxx <br>sähköposti: maakuasiakaspalvelu@esimerkkimaakumail.fi</p>
+      <h3>tämä on vain koulutehtävä yritystä Maaku oy ei ole oikeasti olemassa.</h3>
+      <!-- kuva -->
+      <figure>
+      <img src="kuvat/pexels-david-bartus-442116.jpg" alt="Green plant field near house" style="max-width: 100%; height: auto;" >
+      <figcaption> Photo by David Bartus: https://www.pexels.com/photo/green-plant-field-near-house-442116/</figcaption>
+      </figure>
 
       <!-- Kuvalinkit-->
       <div class="kuvapidike">
         <a href="kauppa.html"><img src="kuvat/pexels-pixabay-271932Kauppaversio.jpg" alt="Kauppa. Kettu nukkuu maassa." class="kuva" style="border-radius: 25px;" ></a>
-        <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. maatila ja pari traktoria" class="kuva" style="border-radius: 25px;" ></a>
+        <a href="tilaa.html"><img src="kuvat/tilaakuva.jpg" alt="Tilaa. Peltoa ja pari traktoria ylhäältä päin kuvattuna" class="kuva" style="border-radius: 25px;" ></a>
         <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva" ></a>
         <br><br><br><br><br>
       </div>
@@ -52,6 +50,12 @@
     <div class="footer">
       <hr>
       <footer>
+        <!-- Vaadittu lista. -->
+        <ul>
+          <li><a href="index.html">Koti</a></li>
+          <li> <a href="tilaa.html">Tilaa</a></li>
+          <li> <a href="tiedot.html" >Tiedot</a></li>
+        </ul>
         <p>Copyright &copy; 2024, Valtterin nettisivu.</p>
       </footer>
     </div>
