--- a/tilaa.html
+++ b/tilaa.html
@@ -15,10 +15,10 @@
   <body>
     <!-- navigointipalkki -->
     <div class="navigation-bar">
-      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" style="border-radius: 66px;" ></a>
-        <a href="index.html">Koti</a>
-        <a href="kauppa.html">Kauppa</a>
-        <a href="tiedot.html">Tiedot</a>
+      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
+      <a href="index.html">Koti</a>
+      <a href="kauppa.html">Kauppa</a>
+      <a href="tiedot.html">Tiedot</a>
     </div >
 
    
@@ -54,18 +54,18 @@
       </table>
       <br>
    
-      <!-- Logo hieman isompana-->
-      <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
-      
+      <!-- Kuva-->
+      <figure>
+        <img src="kuvat/farm.png" alt="Top view of green field. Peltoa ja pari traktoria ylhäältä päin kuvattuna" style=" max-width: 100%; height: auto; " >
+        <figcaption> Photo by Tom Fisk: https://www.pexels.com/photo/top-view-of-green-field-1595104/</figcaption>
+      </figure>
       <!-- Kuvalinkit-->
       <div class="kuvapidike">
         <a href="kauppa.html"><img src="kuvat/pexels-pixabay-271932Kauppaversio.jpg" alt="Kauppa. Kettu nukkuu maassa." class="kuva" style="border-radius: 25px;"></a>
-        
         <a href="tiedot.html"><img src="kuvat/pexels-david-bartus-442116Tiedot.jpg" alt="Tiedot. Maatilan maisemaa viljelmiltä talolle kuvattuna." class="kuva" style="border-radius: 25px;"></a>
         <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" class="kuva" ></a>
-          <br><br><br><br><br>
+        <br><br><br><br><br>
       </div>
-
     </div>
 
     <div class="footer">
