meta description lisäys
ja pientä korjailua.

--- a/kauppa.html
+++ b/kauppa.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta 
+      name ="description"
+      content="Maaku Kauppa"
+    >
 
     <title>Maaku Kauppa</title>
    
- 
+  
 
   </head>
   <body>
@@ -18,7 +21,7 @@
     <div class="navigation-bar">
       <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
       <a href="index.html">Koti</a>
-      <a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+      <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
       <a href="tiedot.html">Tiedot</a>
     </div >
 
@@ -74,7 +77,8 @@
       </div>
     
       <br><br><br><br><br><br>
-      <p><a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a></p>
+       <!-- "Tilaa"-nappi-->
+      <p><a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a></p>
       <!-- Logo hieman isompana-->
       <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
       <br>
