--- a/tiedot.html
+++ b/tiedot.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta 
+      name ="description"
+      content="Maaku Tiedot"
+    >
 
     <title>Maaku Tiedot</title>
    
@@ -17,7 +20,7 @@
     <div class="navigation-bar">
       <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
       <a href="index.html">Koti</a>
-      <a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+      <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
       <a href="kauppa.html">Kauppa</a>
     </div >
     
