--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta 
+      name ="description"
+      content="Maaku etusivu Kuvitteellinen yritys."
+    >
 
     <title>Maaku</title>
 
@@ -17,7 +20,7 @@
       <div class="navigation-bar">
         <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>          
         <a href="kauppa.html">Kauppa</a>
-        <a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+        <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
         <a href="tiedot.html">Tiedot</a>
       </div >
     </header>
@@ -50,7 +53,7 @@
     <div class="footer">
       <hr>
       <footer>
-        <a href="tilaa.html"style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+        <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
         <p>Copyright &copy; 2024, Valtterin nettisivu.</p>
       </footer>
     </div>
