--- a/tiedot.html
+++ b/tiedot.html
@@ -34,7 +34,7 @@
       <p>Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.</p>
       <br>
       <p>Yhteystiedot: <br>puhelinnumero: xxx-xxxxxx <br>sähköposti: maakuasiakaspalvelu@esimerkkimaakumail.fi</p>
-      <h3>tämä on vain koulutehtävä yritystä Maaku oy ei ole oikeasti olemassa.</h3>
+      <h3>Tämä on vain koulutehtävä. Sivustolla mainittua yritystä "Maaku" Maaperäkuntoon oy ei ole oikeasti olemassa, se on kuvitteellinen esimerkki yritys.</h3>
       <!-- kuva -->
       <figure>
       <img src="kuvat/pexels-david-bartus-442116.jpg" alt="Green plant field near house" style="max-width: 100%; height: auto;" >
