--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta 
-      name ="description"
-      content="Maaku etusivu Kuvitteellinen yritys."
-    >
+    <meta name="description" content="Maaku etusivu Kuvitteellinen yritys.">
 
     <title>Maaku</title>
 
@@ -30,7 +27,7 @@
       <!--Esimerkkitekstiä. -->
       <h1>Maaku etusivu</h1>
       <!--Logo. -->
-      <img src="kuvat/Maaku.jpg" alt="Maaku logo" style="width: 450px; padding-left: 15px;">
+      <img class="etusivunlogo" src="kuvat/Maaku.jpg" alt="Maaku logo">
       <h2>Joku hieno iskulause!</h2>
       <p>Jotain hienoa tietoa yrityksen myynnistä. Jotain hienoa tietoa yrityksen myynnistä. 
         Jotain hienoa tietoa yrityksen myynnistä. Jotain hienoa tietoa yrityksen myynnistä.</p>
