--- a/kauppa.html
+++ b/kauppa.html
@@ -19,8 +19,9 @@
    
 		<!-- navigointipalkki -->
     <div class="navigation-bar">
-      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
-      <a href="index.html">Koti</a>
+      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
+      <a href="index.html">Etusivu</a>        
+      <a href="kauppa.html" id="valinta" >Kauppa</a>
       <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
       <a href="tiedot.html">Tiedot</a>
     </div >
