--- a/tiedot.html
+++ b/tiedot.html
@@ -16,14 +16,15 @@
 
   </head>
  <body>
-    <!-- navigointipalkki -->
+    <!-- Haluttu navigointipalkki -->
+
     <div class="navigation-bar">
-      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
-      <a href="index.html">Koti</a>
-      <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
+      <a href="index.html"  >Etusivu</a>        
       <a href="kauppa.html">Kauppa</a>
+      <a href="tilaa.html" style="padding: 12px 0px;"  ><button class="tilaanappi">Tilaa</button></a>
+      <a href="tiedot.html" id="valinta">Tiedot</a>
     </div >
-    
  
     <!-- Pidike sisällön keskittämiseen. -->
     <div class="pidike">
@@ -34,7 +35,7 @@
       <p>Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.</p>
       <br>
       <p>Yhteystiedot: <br>puhelinnumero: xxx-xxxxxx <br>sähköposti: maakuasiakaspalvelu@esimerkkimaakumail.fi</p>
-      <h3>Tämä on vain koulutehtävä. Sivustolla mainittua yritystä "Maaku" Maaperäkuntoon oy ei ole oikeasti olemassa, se on kuvitteellinen esimerkki yritys.</h3>
+      <h3 style="color: red; text-shadow: 2px 1px black; ">Tämä on vain koulutehtävä. Sivustolla mainittua yritystä "Maaku" Maaperäkuntoon oy ei ole oikeasti olemassa, se on kuvitteellinen esimerkki yritys.</h3>
       <!-- kuva -->
       <figure>
       <img src="kuvat/pexels-david-bartus-442116.jpg" alt="Green plant field near house" style="max-width: 100%; height: auto;" >
@@ -55,7 +56,7 @@
       <footer>
         <!-- Vaadittu lista. -->
         <ul>
-          <li><a href="index.html">Koti</a></li>
+          <li><a href="index.html">Etusivu</a></li>
           <li> <a href="tilaa.html">Tilaa</a></li>
           <li> <a href="tiedot.html" >Tiedot</a></li>
         </ul>
