--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 	  <!-- navigointipalkki -->
     <header>
       <div class="navigation-bar">
-        <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>          
+        <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
+        <a href="index.html" id="valinta" >Etusivu</a>        
         <a href="kauppa.html">Kauppa</a>
         <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
         <a href="tiedot.html">Tiedot</a>
       </div >
     </header>
+    
    <!-- Pidike sisällön keskittämiseen. -->
     <div class="pidike" >
        
