--- a/tilaa.html
+++ b/tilaa.html
@@ -18,24 +18,24 @@
   <body>
     <!-- navigointipalkki -->
     <div class="navigation-bar">
-      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo"  ></a>
-      <a href="index.html">Koti</a>
+      <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
+      <a href="index.html"  >Etusivu</a>        
       <a href="kauppa.html">Kauppa</a>
+      <a href="tilaa.html" style="padding: 12px 0px;" id="valinta" ><button id="valinta" class="tilaanappi">Tilaa</button></a>
       <a href="tiedot.html">Tiedot</a>
     </div >
 
-   
 
     <!-- Pidike sisällön keskittämiseen. -->
     <div class="pidike">
 
       <h1 >Tilaa</h1>
        <!-- tekstin alleviivaus. -->
-      <h2 style="text-decoration: underline;">Soita heti numeroon xxx-xxxxxx! tai syötä sähköpostiosoitteesi niin lähetämme ohjeet tilaukseen sähköpostia käyttäen</h2>
+      <h2 style="text-decoration: underline;">Soita heti numeroon xxx-xxxxxx! tai syötä sähköpostiosoitteesi niin lähetämme ohjeet tilaukseen sähköpostia käyttäen (ei toimintoa koska sivusto on tehty käyttäen pelkästään HTML ja CSS.)</h2>
      
       <form>
-        <input type="text" id="sähköposti" >
-        <button type="button">lähetä</button>
+        <input type="text" id="sähköposti"  >
+        <button type="button">leikki nappi</button>
       </form>
       <p>Tietoa miten tilaus toimii ja maksutavat yms.</p>
       <br>
