--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
     <div class="footer">
       <hr>
       <footer>
+        <!-- Vaadittu lista. -->
+        <ul>
+          <li><a href="index.html">Etusivu</a></li>
+          <li> <a href="kauppa.html">Kauppa</a></li>
+          <li> <a href="tilaa.html">Tilaa</a></li>
+          <li> <a href="tiedot.html" >Tiedot</a></li>
+        </ul>
         <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
         <p>Copyright &copy; 2024, Valtterin nettisivu.</p>
       </footer>
