--- a/kauppa.html
+++ b/kauppa.html
@@ -97,6 +97,12 @@
     <div class="footer">
       <hr>
       <footer>
+        <ul>
+          <li><a href="index.html">Etusivu</a></li>
+          <li> <a href="kauppa.html">Kauppa</a></li>
+          <li> <a href="tilaa.html">Tilaa</a></li>
+          <li> <a href="tiedot.html" >Tiedot</a></li>
+        </ul>
         <p>Copyright &copy; 2024, Valtterin nettisivu</p>
       </footer>
     </div>
