--- a/tiedot.html
+++ b/tiedot.html
@@ -54,9 +54,9 @@
     <div class="footer">
       <hr>
       <footer>
-        <!-- Vaadittu lista. -->
         <ul>
           <li><a href="index.html">Etusivu</a></li>
+          <li> <a href="kauppa.html">Kauppa</a></li>
           <li> <a href="tilaa.html">Tilaa</a></li>
           <li> <a href="tiedot.html" >Tiedot</a></li>
         </ul>
