--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
         <a href="index.html" id="valinta" >Etusivu</a>        
         <a href="kauppa.html">Kauppa</a>
-        <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+        <a href="tilaa.html" >Tilaa</a>
         <a href="tiedot.html">Tiedot</a>
       </div >
     </header>
@@ -59,7 +59,7 @@
           <li> <a href="tilaa.html">Tilaa</a></li>
           <li> <a href="tiedot.html" >Tiedot</a></li>
         </ul>
-        <a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a>
+        <p><button type="reset" class="tilaanappi" style="padding-top:  0px;" onclick="location.href='tilaa.html'"> Tilaa </button></p>
         <p>Copyright &copy; 2024, Valtterin nettisivu.</p>
       </footer>
     </div>
