--- a/tilaa.html
+++ b/tilaa.html
@@ -21,7 +21,7 @@
       <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
       <a href="index.html"  >Etusivu</a>        
       <a href="kauppa.html">Kauppa</a>
-      <a href="tilaa.html" style="padding: 12px 0px;" id="valinta" ><button id="valinta" class="tilaanappi">Tilaa</button></a>
+      <a href="tilaa.html" id="valinta" >Tilaa</a>
       <a href="tiedot.html">Tiedot</a>
     </div >
 
@@ -74,6 +74,7 @@
     <div class="footer">
       <hr>
       <footer>
+
         <ul>
           <li><a href="index.html">Etusivu</a></li>
           <li> <a href="kauppa.html">Kauppa</a></li>
