--- a/tiedot.html
+++ b/tiedot.html
@@ -22,7 +22,7 @@
       <a href="index.html"><img class="logo" src="kuvat/Maaku.jpg" alt="Maaku logo" ></a>  
       <a href="index.html"  >Etusivu</a>        
       <a href="kauppa.html">Kauppa</a>
-      <a href="tilaa.html" style="padding: 12px 0px;"  ><button class="tilaanappi">Tilaa</button></a>
+      <a href="tilaa.html">Tilaa</a>
       <a href="tiedot.html" id="valinta">Tiedot</a>
     </div >
  
@@ -35,6 +35,7 @@
       <p>Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.</p>
       <br>
       <p>Yhteystiedot: <br>puhelinnumero: xxx-xxxxxx <br>sähköposti: maakuasiakaspalvelu@esimerkkimaakumail.fi</p>
+      <p><button type="reset" class="tilaanappi" style="padding-top:  0px; float: right;" onclick="location.href='tilaa.html'"> Tilaa </button></p>
       <h3 style="color: red; text-shadow: 2px 1px black; ">Tämä on vain koulutehtävä. Sivustolla mainittua yritystä "Maaku" Maaperäkuntoon oy ei ole oikeasti olemassa, se on kuvitteellinen esimerkki yritys.</h3>
       <!-- kuva -->
       <figure>
