--- a/kauppa.html
+++ b/kauppa.html
@@ -41,7 +41,7 @@
       <!-- Kaupan Tuotekortit ja niiden pidike. -->
       <div class="kortinpidike">
         <div class="kortti">
-          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: blue;" />
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: blue;">
           <h2>Tuote 1</h2>
           <p class="hinta">19.99€</p>
           <p>jotain tuotteesta..</p>
@@ -50,7 +50,7 @@
         </div>
         <br>
         <div class="kortti">
-          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: green;" />
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: green;">
           <h2>Tuote 2</h2>
           <p class="hinta">99.99</p>
           <p>jotain tuotteesta..</p>
@@ -59,7 +59,7 @@
         </div>
         <br>
         <div class="kortti">
-          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: yellow;" />
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: yellow;">
           <h2>Tuote 3</h2>
           <p class="hinta">179.99</p>
           <p>jotain tuotteesta..</p>
@@ -68,7 +68,7 @@
         </div>
         <br>
         <div class="kortti">
-          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: red;" />
+          <img src="kuvat/Shopping_cart_icon.png" alt="Ostoskärry." class="kuva" style="background-color: red;">
           <h2>Tuote 4</h2>
           <p class="hinta">499.99</p>
           <p>jotain tuotteesta..</p>
@@ -79,7 +79,7 @@
     
       <br><br><br><br><br><br>
        <!-- "Tilaa"-nappi-->
-      <p><a href="tilaa.html" style="padding: 12px 0px;" ><button class="tilaanappi">Tilaa</button></a></p>
+       <p><button type="reset" class="tilaanappi" style="padding-top:  0px; " onclick="location.href='tilaa.html'"> Tilaa </button></p>
       <!-- Logo hieman isompana-->
       <a href="index.html"><img src="kuvat/Maaku.jpg" alt="Maaku logo" style="  max-width: 300px; min-width: 20px;" ></a>
       <br>
