--- a/kauppa.html
+++ b/kauppa.html
@@ -9,6 +9,7 @@
       name ="description"
       content="Maaku Kauppa"
     >
+    <meta name="robots" content="noindex, nofollow">
 
     <title>Maaku Kauppa</title>
    
