--- a/tiedot.html
+++ b/tiedot.html
@@ -9,6 +9,7 @@
       name ="description"
       content="Maaku Tiedot"
     >
+    <meta name="robots" content="noindex, nofollow">
 
     <title>Maaku Tiedot</title>
    
@@ -35,6 +36,7 @@
       <p>Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.Jotain hienoa tietoa yrityksen myynnistä.</p>
       <br>
       <p>Yhteystiedot: <br>puhelinnumero: xxx-xxxxxx <br>sähköposti: maakuasiakaspalvelu@esimerkkimaakumail.fi</p>
+      <!-- Tilaa-nappi-->
       <p><button type="reset" class="tilaanappi" style="padding-top:  0px; float: right;" onclick="location.href='tilaa.html'"> Tilaa </button></p>
       <h3 style="color: red; text-shadow: 2px 1px black; ">Tämä on vain koulutehtävä. Sivustolla mainittua yritystä "Maaku" Maaperäkuntoon oy ei ole oikeasti olemassa, se on kuvitteellinen esimerkki yritys.</h3>
       <!-- kuva -->
