--- a/tilaa.html
+++ b/tilaa.html
@@ -9,6 +9,7 @@
       name ="description"
       content="Maaku Tilaa"
     >
+    <meta name="robots" content="noindex, nofollow">
 
     <title>Maaku Tilaa</title>
    
